@startuml

!include clase_bacanal.plantuml
!include interfaz_obstaculo.plantuml
!include interfaz_premio.plantuml
!include clase_comida.plantuml
!include clase_ganarEquipamiento.plantuml
!include clase_fiera.plantuml
!include clase_lesion.plantuml
!include clase_casilla.plantuml

class ObstaculoNulo {
  + obstaculizar(gladiador:Gladiador)
}
class PremioNulo{
  + premiar(gladiador:Gladiador)
}

interface iCasilla << interface >> {
  + validarPosicionEnCamino(int, int): void
  + recibir(Gladiador): void
  + getGladiadores(): List<Gladiador>
  + esContigua(iCasilla): boolean
  + getPremio(): Premio
  + buscadoEstaEnLaCasilla(Gladiador): iCasilla
  + getObstaculo(): Obstaculo
  + esContigua(Coordenada): boolean
  + agregarObserver(Observer): void
  + getCoordenada(): Coordenada
  + expulsar(Gladiador): void
  + moverGladiador(int, Gladiador): void
  + setSiguiente(iCasilla): void
}

class Coordenada {
  + Coordenada(int, int):
  - x: int
  - y: int
  + getX(): int
  + getY(): int
  + esContigua(Coordenada): Boolean
}



Coordenada <. CasillaCamino
iCasilla ^-. CasillaCamino
CasillaCamino o-- Premio
Premio ^. PremioNulo
ObstaculoNulo .^ Obstaculo
CasillaCamino o-- Obstaculo

Obstaculo ^.. Bacanal
Obstaculo ^.. FieraSalvaje
Obstaculo ^.. Lesion

Premio ^.. PremioEquipamiento
Premio ^.. PremioComestible

@enduml
